--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://github.com/tahyo27/coin_converter.git",
   "eslintConfig": {
     "extends": [
       "react-app",
